--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <html>
-<header>
- <title>Skydriven | Home</title> 
- <link rel="stylesheet" href="style.css">
-</header>
-<body>
-  <h1>Well hello there monkey!</h1>
-  <h2>Welcome to my paking awesome website!</h2>
-  <img src="https://media.tenor.com/sQXkvagqfWYAAAAM/lol-funny-memes.gif" id="doggo"/>
-  <h4>thanks for visiting my paking awesome website!</h4>
-  <img src="https://i.imgflip.com/4s0v66.jpg" id="Manny"/>
-  <p>ps: kapoy panindot</p>
-</body>
- 
+    <head>
+        <title>Hi Aydol</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div>
+            <h1>Will you be my valentine?</h1>
+            <button id="yes">Yes</button>
+            <button id="no">No</button>
+        </div>
+    </body>
+    <script src="script.js"></script>
 </html>
