--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<html>
+<html lang="eng">
     <head>
         <title>Hi Aydol</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>
+        <div class="picture">
+            <img src="siAydol.jfif" class="pic">
             <h1>Will you be my valentine?</h1>
+        </div>
+        <div class="container">
             <button id="yes">Yes</button>
             <button id="no">No</button>
         </div>
