--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="picture">
             <img src="siAydol.jfif" class="pic">
-            <h1>Will you be my valentine?</h1>
+            <p>Will you be my valentine?</p>
         </div>
         <div class="container">
             <button id="yes">Yes</button>
