--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="eng">
-    <header>
+    <head>
         <title>Aydol</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
@@ -25,6 +25,7 @@
         </div>
     </body>
     <footer>
-
+        <h3>Created By: 5kydriven</h3>
     </footer>
+    <script src="script.js"></script>
 </html>
