--- a/yes.html
+++ b/yes.html
@@ -7,17 +7,15 @@
     <body>   
         <div class="container">
             <p>YIEEE!! See you in February 14</p>
-        </div>
-        <div class="audio">
             <audio autoplay controls>
                 <source src="./music/kilig.mp3" type="audio/mpeg">
-            </audio>
+            </audio> 
         </div>
-            <img src="./memes/kilig.gif" id="kilig">
-            <img src="./memes/heartBeat.gif" id="beat">
-            <img src="./memes/manny.jfif" id="manny">
-            <img src="./memes/valentine.jpg" id="valentine">
-            <img src="./memes/ILY.jfif" id="ily">
+            <img src="./memes/kilig.gif" class="pics" id="kilig">
+            <img src="./memes/heartBeat.gif" class="pics" id="beat">
+            <img src="./memes/manny.jfif" class="pics" id="manny">
+            <img src="./memes/valentine.jpg" class="pics" id="valentine">
+            <img src="./memes/ILY.jfif" class="pics" id="ily">
     </body>
     <footer>
         <h3>Created By: 5kydriven</h3>
