--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="eng">
     <head>
-        <title>Aydol</title>
+        <title>Date ta idol!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
