--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>April Fools</title>
-    <link rel="stylesheet" href="/designFunctions/style.css">
+    <link rel="stylesheet" href="designFunctions/style.css">
 </head>
 <body>
     <div id="bodyContainer">
@@ -17,13 +17,13 @@
                 <p>" Today we don't have any motivational qoutes,<br> if you want to give up, give up. "</p>
             </div>
             <div id="audio">
-                <audio loop src="/designFunctions/audio.mp3" type="audio/mpeg" id="myAudio"></audio>
+                <audio loop src="designFunctions/audio.mp3" type="audio/mpeg" id="myAudio"></audio>
             </div>
         </div>
         <div id="btnContainer">
             <button id="btn">Qoutes for today</button>
         </div>
     </div>
-    <script src="/designFunctions/script.js"></script>
+    <script src="designFunctions/script.js"></script>
 </body>
 </html>
