--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>April Fools</title>
+    <title>Be Motivated!</title>
+    <link rel="icon" href="designFunctions/iconEdited.png" type="image/x-icon" id="icon">
     <link rel="stylesheet" href="designFunctions/style.css">
 </head>
 <body>
