--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="designFunctions/style.css">
 </head>
 <body>
+    <audio autoplay src="designFunctions/insrumental.mp3" type="audio/mpeg" id="intro"></audio>
     <div id="bodyContainer">
         <div id="container">
             <div id="closebtn">
