--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="designFunctions/style.css">
 </head>
 <body>
-    <audio autoplay src="designFunctions/insrumental.mp3" type="audio/mpeg" id="intro"></audio>
     <div id="bodyContainer">
         <div id="container">
             <div id="closebtn">
@@ -19,7 +18,7 @@
                 <p>" Today we don't have any motivational qoutes,<br> if you want to give up, give up. "</p>
             </div>
             <div id="audio">
-                <audio loop src="designFunctions/audio.mp3" type="audio/mpeg" id="myAudio"></audio>
+                <audio loop src="designFunctions/editedaudion.mp3" type="audio/mpeg" id="myAudio"></audio>
             </div>
         </div>
         <div id="btnContainer">
