--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button id="xbtn">X</button>
             </div>
             <div>
-                <p>" Today we don't have any motivational qoutes,<br> if you want to give up, give up. "</p>
+                <p>"Wala sata'y motivational qoutes ron ha,<br> kung kinsa tong kaundangon, undang na."</p>
             </div>
             <div id="audio">
                 <audio loop src="designFunctions/editedaudion.mp3" type="audio/mpeg" id="myAudio"></audio>
